
# 1.3.0
    * Allow checkout with any combination of products.
    * Enable using Nuvei Payment Plans for product with attribute only, without variations.
    * Do not pass Product data by open/updateOrder request.
    * Do not pass Subscription data by open/updateOrder request, but keep it in WC session. Just before redirect to the success page save it as Order meta data.

# 1.2.4
    * Fix for the case when updateOrder does not upgrade empty userTokenId.
    * Do not validate and process the Tokenization DMNs.
    * When click on Pay button check if the products are still in stock.

# 1.2.3
    * Fix the links to Nuvei documentation into the plugin settings.
    * Do not process Pending DMNs.
    * Check for set integration_type before try to use it.
    * Changes into the readme file.
    * Added NUVEI_LOGS_DIR constant. Save all plugin generated files in it.
    * Removed tmp folder.
    * The Notify URL provided to Nuvei Integration/TechSupport Team must be updated!

# 1.2.2
    * Fixed the missing message for Insufficient funds.
    * Tested on WP 6.1.1 and WC 7.3.0.

# 1.2.1
    * After approved transaction, do not click on #place_order button, but submit form.checkout if exists.
    * Tested on WP 6.1.1 and WC 7.1.0.

# 1.2.0
    * Hide Void button 48 hours after the Order is made.
    * Hide Void button for Zero Orders.
    * Added "Cancel Subscription" button, when the Subscription was confirmed as Active.

# 1.1.2
    * Tested on WP 6.1 and WC 7.0.1.

# 1.1.1
    * Disable Nuvei Rebilling products for Guest users.

# 1.1.0
    * Unify products with plan in a single subscription, and multiply subscription amount by their quantity.
    * Tested on WC 6.9.2.

# 1.0.4
    * Show better error message if the client get "Insufficient funds" error.
    * Upgraded latest tested WC version.

# 1.0.3
    * Tested on WP 6.0.1 and WC 6.7.0.
    * Do not get all information in debug_backtrace().