@@ -223,13 +223,6 @@ class Nuvei_Notify_Url extends Nuvei_Request
 			$this->subscription_start($transactionType, $clientUniqueId);
             $this->subscription_cancel($transactionType, $order_id);
 			
-//			if ('Void' == $transactionType
-//                && 'active' == $this->sc_order->get_meta(NUVEI_ORDER_SUBSCR_STATE)
-//            ) {
-//                $ncs_obj = new Nuvei_Subscription_Cancel($this->plugin_settings);
-//                $ncs_obj->process(['subscriptionId' => $this->sc_order->get_meta(NUVEI_ORDER_SUBSCR_ID)]);
-//			}
-				
 			echo wp_json_encode('DMN received.');
 			exit;
 		}
@@ -494,10 +487,6 @@ class Nuvei_Notify_Url extends Nuvei_Request
             return;
         }
         
-//        $subscr_data = json_decode(Nuvei_Http::get_param('customField1', 'json'), true);
-//        $subscr_data = $this->sc_order->get_meta(NUVEI_ORDER_SUBSCR);
-//        Nuvei_Logger::write($subscr_data, '$subscr_data');
-        
         $order_all_meta = get_post_meta($order_id);
         
         foreach ($order_all_meta as $key => $data) {
@@ -518,22 +507,7 @@ class Nuvei_Notify_Url extends Nuvei_Request
             $prod_plan['clientRequestId']   = $order_id . $key;
             
             $ns_obj = new Nuvei_Subscription($this->plugin_settings);
-
-            // check for more than one products of same type
-//            $qty        = 1;
-//            $items_data = json_decode(Nuvei_Http::get_param('customField2', 'json'), true);
-//
-//            if (!empty($items_data) && is_array($items_data)) {
-//                $items_data_curr = current($items_data);
-//
-//                if (!empty($items_data_curr['quantity']) && is_numeric($items_data_curr['quantity'])) {
-//                    $qty = $items_data_curr['quantity'];
-//
-//                    Nuvei_Logger::write('We will create ' . $qty . ' subscriptions.');
-//                }
-//            }
-
-            $resp = $ns_obj->process($prod_plan);
+            $resp   = $ns_obj->process($prod_plan);
 
             // On Error
             if (!$resp || !is_array($resp) || empty($resp['status']) || 'SUCCESS' != $resp['status']) {
@@ -555,101 +529,10 @@ class Nuvei_Notify_Url extends Nuvei_Request
                 . __('<b>Recurring amount:</b> ', 'nuvei_checkout_woocommerce') . $this->sc_order->get_currency() . ' '
                 . $prod_plan['recurringAmount'];
             
-            // save first subscr meta
-//            $subsc_data = $this->sc_order->get_meta(NUVEI_ORDER_SUBSCR);
-//            Nuvei_Logger::write($subsc_data, 'Start Subscr');
-//            
-//            if (empty($subsc_data)) {
-//                $subsc_data = [];
-//            }
-//            
-//            $subsc_data[$resp['subscriptionId']]['plan_id']             = $prod_plan['planId'];
-//            $subsc_data[$resp['subscriptionId']]['prod_variation_id']   = $item_prod;
-//                
-//            $this->sc_order->update_meta_data(NUVEI_ORDER_SUBSCR, $subsc_data);
-
             $this->sc_order->add_order_note($msg);
             $this->sc_order->save();
         }
         
-        // iterate over products with plans
-//        foreach ($subscr_data as $item_prod => $prod_plan) {
-//            if (empty($prod_plan) || !is_array($prod_plan)) {
-//                Nuvei_Logger::write($prod_plan, 'There is a problem with the DMN Product Payment Plan data:');
-//                continue;
-//            }
-//
-//            // this is the only place to pass the Order ID, we will need it later, to identify the Order
-////            $prod_plan['clientRequestId'] = $order_id . '_' . uniqid();
-//            $prod_plan['clientRequestId'] = $order_id . '_' . $item_prod;
-//            
-//            // save subsc as single meta
-////            $subsc_data = [
-////                'plan_id'           => $prod_plan['planId'],
-////                'prod_variation_id' => $item_prod,
-////            ];
-//            
-////            $this->sc_order->update_meta_data(
-////                NUVEI_ORDER_SUBSCR . '_' . $prod_plan['clientRequestId'], 
-////                $subsc_data
-////            );
-////            $this->sc_order->save();
-//            
-//            $ns_obj = new Nuvei_Subscription($this->plugin_settings);
-//
-//            // check for more than one products of same type
-//            $qty        = 1;
-//            $items_data = json_decode(Nuvei_Http::get_param('customField2', 'json'), true);
-//
-//            if (!empty($items_data) && is_array($items_data)) {
-//                $items_data_curr = current($items_data);
-//
-//                if (!empty($items_data_curr['quantity']) && is_numeric($items_data_curr['quantity'])) {
-//                    $qty = $items_data_curr['quantity'];
-//
-//                    Nuvei_Logger::write('We will create ' . $qty . ' subscriptions.');
-//                }
-//            }
-//
-//            $resp = $ns_obj->process($prod_plan);
-//
-//            // On Error
-//            if (!$resp || !is_array($resp) || empty($resp['status']) || 'SUCCESS' != $resp['status']) {
-//                $msg = __('<b>Error</b> when try to start a Subscription by the Order.', 'nuvei_checkout_woocommerce');
-//
-//                if (!empty($resp['reason'])) {
-//                    $msg .= '<br/>' . __('<b>Reason:</b> ', 'nuvei_checkout_woocommerce') . $resp['reason'];
-//                }
-//
-//                $this->sc_order->add_order_note($msg);
-//                $this->sc_order->save();
-//
-////				break;
-//            }
-//
-//            // On Success
-//            $msg = __('<b>Subscription</b> was created. ') . '<br/>'
-//                . __('<b>Subscription ID:</b> ', 'nuvei_checkout_woocommerce') . $resp['subscriptionId'] . '.<br/>' 
-//                . __('<b>Recurring amount:</b> ', 'nuvei_checkout_woocommerce') . $this->sc_order->get_currency() . ' '
-//                . $prod_plan['recurringAmount'];
-//            
-//            // save first subscr meta
-////            $subsc_data = $this->sc_order->get_meta(NUVEI_ORDER_SUBSCR);
-////            Nuvei_Logger::write($subsc_data, 'Start Subscr');
-////            
-////            if (empty($subsc_data)) {
-////                $subsc_data = [];
-////            }
-////            
-////            $subsc_data[$resp['subscriptionId']]['plan_id']             = $prod_plan['planId'];
-////            $subsc_data[$resp['subscriptionId']]['prod_variation_id']   = $item_prod;
-////                
-////            $this->sc_order->update_meta_data(NUVEI_ORDER_SUBSCR, $subsc_data);
-//
-//            $this->sc_order->add_order_note($msg);
-//            $this->sc_order->save();
-//        }
-			
 		return;
 	}
     
